--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "dot-prop": "^4.2.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
     "joi": "^14.3.1",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.4",
     "@types/dot-prop": "^4.2.0",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/http-errors": "^1.6.1",
     "@types/joi": "^14.3.1",
