--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 HOST=localhost
-PORT=8080
+PORT=8081
 
 CONFIG_PATH=/home/itechart/workflow/shopBackend/config
 ROUTES_PATH=/home/itechart/workflow/shopBackend/dist/routes
 SCHEMAS_PATH=/home/itechart/workflow/shopBackend/dist/schemas
+
+TWILLIO_SID=AC81930867f67bb371b4bdca71a96b58a0
+TWILLIO_TOKEN=51f675e9acfdb39b0ee6014f2c338dbb
+TWILLIO_NUMBER=+13139086718
+
+SECRET=SECRET_KEY
