--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.4.0",
     "log4js": "^4.0.2",
     "realm": "^2.23.0",
+    "twilio": "^3.28.0",
     "typescript": "latest",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
