Changed registration logic and added aws3 image uploading

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 HOST=localhost
-PORT=8081
+PORT=8080
 
 CONFIG_PATH=/home/itechart/workflow/shopBackend/config
 ROUTES_PATH=/home/itechart/workflow/shopBackend/dist/routes
@@ -10,3 +10,8 @@ TWILLIO_TOKEN=51f675e9acfdb39b0ee6014f2c338dbb
 TWILLIO_NUMBER=+13139086718
 
 SECRET=SECRET_KEY
+
+AWS_ACCESS_KEY_ID=AKIAIOM3HEMKLPQGAITQ
+AWS_SECRET_ACCESS_KEY=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
+REGION=us-east-1
+S3_BUCKET=skogencoinimages
