--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,11 @@ AWS_ACCESS_KEY_ID=AKIAIOM3HEMKLPQGAITQ
 AWS_SECRET_ACCESS_KEY=dL3wE37YOGEBn2+Oj3OLZ+Q2qtTSWe4L54Cf+r4d
 REGION=us-east-1
 S3_BUCKET=skogencoinimages
+
+FAKE_USERS_AMOUNT=3
+FAKE_SHOPS_AMOUNT=4
+FAKE_PRODUCTS_AMOUNT=5
+FAKE_SHOP_IMAGE=https://requestreduce.org/images/cliparts-laden-1.jpg
+FAKE_USER_IMAGE=https://www.revechat.com/wp-content/uploads/2016/04/the-shy-customer.jpg
+FAKE_PRODUCT_IMAGE=http://images5.fanpop.com/image/photos/28100000/Red-Present-colors-28142412-400-400.jpg
+
