--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ FAKE_SHOP_IMAGE=https://requestreduce.org/images/cliparts-laden-1.jpg
 FAKE_USER_IMAGE=https://www.revechat.com/wp-content/uploads/2016/04/the-shy-customer.jpg
 FAKE_PRODUCT_IMAGE=http://images5.fanpop.com/image/photos/28100000/Red-Present-colors-28142412-400-400.jpg
 
+SSL_PUBLIC_KEY_PATH=/etc/letsencrypt/keys/0000_key-certbot.pem
+SSL_CERTIFICATE_PATH=/etc/letsencrypt/csr/0000_csr-certbot.pem
